--- a/Folio.html
+++ b/Folio.html
@@ -31,7 +31,35 @@
                 I AM PASSIONATE ABOUT TECHNOLOGY AND INTERACTIVITY, THE <br> TWO FIELDS WHICH I'D LOVE TO STAY MORE
                 INVOLVED
                 IN AND <br> KEEP ABOUT. CONTINUE TO GROW AND IMPROVE EVERY DAY!</p>
-            <img src="assets/img/letswork.svg" alt="" width="150px">
+
+            <table>
+                <tr>
+                    <th>PRINCIPLES & VALUES</th>
+                </tr>
+
+               <tr class="left">
+                    <td>01. <span>Integrity.</span></td> 
+               </tr>
+               <tr class="right">
+                  <td> Always working <br> with accuracy <br> and <br> transparency.</td>
+               </tr>
+
+                <tr class="left">
+                    <td>02. <span>Understanding.</span></td> 
+                </tr>
+                <tr class="right">
+                    <td>Well-made <br> website require <br> effort and <br> comprehension.</td>
+                </tr>
+                
+                <tr class="left">
+                    <td>03. <span>Performance.</span></td>
+                </tr>
+                <tr class="right">
+                    <td>Focus is the key, <br> every minute is <br> important.</td>
+                </tr>
+
+            </table>
+            <img src="assets/img/letswork.svg" alt="" width="120px">
         </article>
     </main>
     <!-- dritte seite-->
